--- a/wp-content/themes/fourlioncapital/assets/css/custom.css
+++ b/wp-content/themes/fourlioncapital/assets/css/custom.css
@@ -853,3 +853,15 @@ footer.footer {
 .teamModal .home_abt_teamBox_logosimg img {
     max-height: 80px;
 }
+.inventmentTabWrap .card .table .tdWhite {
+    position: relative;
+}
+.inventmentTabWrap .card .table .tdWhite:before {
+    content: '';
+    position: absolute;
+    background: #fff;
+    width: 100%;
+    height: 100%;
+    top: -1px;
+    left: -1px;
+} 
