--- a/wp-content/themes/fourlioncapital/assets/css/responsive.css
+++ b/wp-content/themes/fourlioncapital/assets/css/responsive.css
@@ -18,24 +18,47 @@
 .ftrLinkAdrs .ftrLinkAdrs_col {
     width: 48%;
 }
-.ftrLinkAdrs .ftrLinkAdrs_col:nth-child(even) {
-    margin-left: 4%;
+.ftrLinkAdrs .ftrLinkAdrs_col:nth-child(1) {
+    margin-right: 2%;
+    padding-left: 20px;
+}
+.ftrLinkAdrs .ftrLinkAdrs_col:nth-child(2) {
+    margin-left: 2%;
+    padding-left: 40px;
+    border-left: 1px solid #AFB6C0;
 }
     
-}
+} 
 
 @media screen and ( min-width: 1200px ) {
 
 .container {
     max-width: 1665px;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 50px;
+    padding-right: 50px;
 }   
 p {
     margin-bottom: 25px; 
 } 
+.ftrLinks.ftrMenu-list {
+    padding-left: 3rem;
+}
+.ftrBtmCopyright { 
+    text-align: left; 
+    margin-left: 17%;
+    padding-left: 3rem;
+}
     
 }  
+
+@media screen and ( min-width: 1300px ) { 
+
+.container { 
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+}
 
 @media screen and ( max-width: 1699px ) { 
     
