--- a/wp-content/themes/fourlioncapital/assets/css/custom.css
+++ b/wp-content/themes/fourlioncapital/assets/css/custom.css
@@ -865,3 +865,12 @@ footer.footer {
     top: -1px;
     left: -1px;
 } 
+.home_providers_box {
+    margin-bottom: 50px; 
+}
+.home_providers_box_nomb {
+    margin-bottom: 0 !important;
+}
+section#providers {
+    background: #f6f6f7 !important;
+}
